syntax = "proto3";

option go_package = "github.com/michaelhyi/baseball-league-management-system/games/proto";

package proto;

import "google/protobuf/empty.proto";

service GamesService {
    rpc CreateGame (CreateGameRequest) returns (GameId) {}
    rpc GetGame (GameId) returns (GetGameResponse) {}
    rpc UpdateGame (UpdateGameRequest) returns (google.protobuf.Empty) {}
    rpc DeleteGame (GameId) returns (google.protobuf.Empty) {}
}

message CreateGameRequest {
    int32 homeTeamId = 1;
    int32 awayTeamId = 2;
    int32 homeTeamScore = 3;
    int32 awayTeamScore = 4;
    string date = 5;
    string location = 6;
}

message UpdateGameRequest {
    int32 id = 1;
    int32 homeTeamId = 2;
    int32 awayTeamId = 3;
    int32 homeTeamScore = 4;
    int32 awayTeamScore = 5;
    string date = 6;
    string location = 7;
}

message GameId {
    int32 id = 1;
}

message GetGameResponse {
    int32 id = 1;
    int32 homeTeamId = 2;
    int32 awayTeamId = 3;
    int32 homeTeamScore = 4;
    int32 awayTeamScore = 5;
    string date = 6;
    string location = 7;
    string createdAt = 8;
    string updatedAt = 9;
}

